{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 67,
  "lineage": "86b7c827-181e-b5c2-066a-0c07ab795d19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:internet-gateway/igw-0fb61053b5926820e",
            "id": "igw-0fb61053b5926820e",
            "owner_id": "182024812696",
            "tags": {
              "Name": "igw-poc"
            },
            "tags_all": {
              "Name": "igw-poc"
            },
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-0bc09f803519028c4",
            "id": "rtb-0bc09f803519028c4",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb61053b5926820e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00935c7f10e49cdaa",
            "route_table_id": "rtb-0bc09f803519028c4",
            "subnet_id": "subnet-090a39e7021af0252"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00966aa3a1fe4a993",
            "route_table_id": "rtb-0bc09f803519028c4",
            "subnet_id": "subnet-05808141f0c093170"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.publics",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "todolist-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0bc657cb85fab97f6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc657cb85fab97f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "todolist-alb-sg-poc",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-alb-sg-poc"
            },
            "tags_all": {
              "Name": "todolist-alb-sg-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "todolist-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0aa993a4a58861271",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa993a4a58861271",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bc657cb85fab97f6"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "todolist-ecs-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-ecs-sg"
            },
            "tags_all": {
              "Name": "todolist-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.todolist-alb-sg",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "todolist-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0665993c84c22eaf3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0665993c84c22eaf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "218.39.50.99/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa993a4a58861271"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "todolist-rds-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-rds-sg"
            },
            "tags_all": {
              "Name": "todolist-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.todolist-alb-sg",
            "aws_security_group.todolist-ecs-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-090a39e7021af0252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a39e7021af0252",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2a-public-poc"
            },
            "tags_all": {
              "Name": "ap-northeast-2a-public-poc"
            },
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ap-northeast-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-05808141f0c093170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05808141f0c093170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ap-northeast-2b-public-poc"
            },
            "tags_all": {
              "Name": "ap-northeast-2b-public-poc"
            },
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc/vpc-0e927f98dd6d76792",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a6f18a33e20c7d5",
            "default_route_table_id": "rtb-0eb227dff1bdb40e5",
            "default_security_group_id": "sg-02318d56088030521",
            "dhcp_options_id": "dopt-00db6602bf8d3ab9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e927f98dd6d76792",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb227dff1bdb40e5",
            "owner_id": "182024812696",
            "tags": {
              "Name": "vpc-poc"
            },
            "tags_all": {
              "Name": "vpc-poc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-todolist",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/todolist-alb-poc/32222ede2e5866ca",
            "arn_suffix": "app/todolist-alb-poc/32222ede2e5866ca",
            "desync_mitigation_mode": "defensive",
            "dns_name": "todolist-alb-poc-1992200202.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/todolist-alb-poc/32222ede2e5866ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "todolist-alb-poc",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0aa4fe807826c49cd",
              "sg-0bc657cb85fab97f6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05808141f0c093170"
              },
              {
                "subnet_id": "subnet-090a39e7021af0252"
              }
            ],
            "subnets": [
              "subnet-05808141f0c093170",
              "subnet-090a39e7021af0252"
            ],
            "tags": {
              "Name": "todolist-alb-poc"
            },
            "tags_all": {
              "Name": "todolist-alb-poc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0e927f98dd6d76792",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.todolist-alb-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc",
            "module.alb-todolist.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb-todolist",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/todolist-alb-poc/32222ede2e5866ca/8d38b588d8c098a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/blue-todolist-tg/77526cd5c010706f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/todolist-alb-poc/32222ede2e5866ca/8d38b588d8c098a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/todolist-alb-poc/32222ede2e5866ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.todolist-alb-sg",
            "aws_subnet.publics",
            "aws_vpc.vpc",
            "module.alb-todolist.aws_lb.this",
            "module.alb-todolist.aws_lb_target_group.main",
            "module.alb-todolist.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb-todolist",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/blue-todolist-tg/77526cd5c010706f",
            "arn_suffix": "targetgroup/blue-todolist-tg/77526cd5c010706f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/blue-todolist-tg/77526cd5c010706f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blue-todolist-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "blue-todolist-tg"
            },
            "tags_all": {
              "Name": "blue-todolist-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/grenn-todolist-tg/73c18587d934fdd2",
            "arn_suffix": "targetgroup/grenn-todolist-tg/73c18587d934fdd2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/grenn-todolist-tg/73c18587d934fdd2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "grenn-todolist-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "grenn-todolist-tg"
            },
            "tags_all": {
              "Name": "grenn-todolist-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-todolist",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0aa4fe807826c49cd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aa4fe807826c49cd",
            "ingress": [],
            "name": "todolist-alb-poc-20230806092924053200000004",
            "name_prefix": "todolist-alb-poc-",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "todolist-alb-poc"
            },
            "tags_all": {
              "Name": "todolist-alb-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e927f98dd6d76792"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}